--- a/frontend/src/Css/UserProfil.css
+++ b/frontend/src/Css/UserProfil.css
@@ -37,3 +37,28 @@
     height: 60px;
     margin-top: 10px;
 }
+#kullaniciBilgileri{
+    margin-top: 20px;
+}
+#kullaniciTitle{
+    display: flex;
+    justify-content: center;
+}
+.siparisler {
+    margin-top: 10px;
+}
+.card-header label{
+    font-size: 20px;
+}
+.siparisler .card-body{
+    margin: 30px;
+    border: 1px solid rgb(196, 189, 189);
+    border-radius: 30px;
+    
+}
+#teslimEdildi{
+    color: yellowgreen;
+}
+#teslimEdilmedi{
+    color: red;
+}
